# DocuMind

./: README.md  app.py  pyproject.toml  requirements.txt  source.py
Chromadb/: chroma.sqlite3
